--- a/index.html
+++ b/index.html
@@ -210,16 +210,15 @@
             <div class="social-luxury">
                 <h3 class="social-title">FOLLOW OUR JOURNEY</h3>
                 <div class="social-grid">
-                    <a href="https://instagram.com/plutuscollections" class="social-luxury-btn instagram">
+                    <a href="https://www.instagram.com/real_plutus?igsh=dzY1YnphaXdzaXNp" class="social-luxury-btn instagram" target="_blank">
                         <span class="social-icon">📷</span>
                         INSTAGRAM
                     </a>
-                    <a href="https://tiktok.com/@plutuscollections" class="social-luxury-btn tiktok">
+                    <a href="https://vm.tiktok.com/ZSHokVfUX8a9y-xNJEK/" class="social-luxury-btn tiktok" target="_blank">
                         <span class="social-icon">🎵</span>
                         TIKTOK
                     </a>
                 </div>
-                <p class="social-note">Update your social media handles above</p>
             </div>
         </div>
     </section>
@@ -236,4 +235,4 @@
         </div>
     </footer>
 </body>
-  </html>
+</html>
