--- a/index.html
+++ b/index.html
@@ -60,47 +60,54 @@
             <h2 class="section-title-dark">Exclusive Collection</h2>
             <div class="title-divider-gold"></div>
             
-            <div class="collection-note">
-                <p>📸 Premium Product Photography Coming Soon</p>
-            </div>
-            
             <div class="collection-grid">
                 <div class="collection-card">
-                    <div class="collection-image polo">
-                        <div class="collection-overlay">
-                            <div class="collection-icon">👔</div>
-                        </div>
-                    </div>
+                    <img src="polo1.jpg" alt="Broken World Polo Shirts" class="product-img">
                     <div class="collection-info">
-                        <h3 class="collection-name">SIGNATURE POLO</h3>
-                        <p class="collection-desc">Timeless elegance in every stitch. Premium cotton blend for unmatched comfort and style.</p>
-                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Signature%20Polo%20collection" class="btn-order">INQUIRE NOW</a>
+                        <h3 class="collection-name">BROKEN WORLD POLO</h3>
+                        <p class="collection-desc">Exclusive pattern design in black & white. Premium quality polo shirts for the fashion-forward.</p>
+                        <div class="price-tag">$10</div>
+                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Broken%20World%20Polo%20-%20$10" class="btn-order">ORDER NOW</a>
                     </div>
                 </div>
 
                 <div class="collection-card">
-                    <div class="collection-image hoodie">
-                        <div class="collection-overlay">
-                            <div class="collection-icon">🧥</div>
-                        </div>
-                    </div>
+                    <img src="polo2.jpg" alt="ABTIS 1987 Polo Shirt" class="product-img">
                     <div class="collection-info">
-                        <h3 class="collection-name">LUXURY HOODIES</h3>
-                        <p class="collection-desc">Sophisticated comfort meets contemporary design. Crafted for the discerning individual.</p>
-                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Luxury%20Hoodie%20collection" class="btn-order">INQUIRE NOW</a>
+                        <h3 class="collection-name">ABTIS 1987 POLO</h3>
+                        <p class="collection-desc">Vintage-inspired design with red & white trim. Classic style with contemporary attitude.</p>
+                        <div class="price-tag">$10</div>
+                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20ABTIS%201987%20Polo%20-%20$10" class="btn-order">ORDER NOW</a>
                     </div>
                 </div>
 
                 <div class="collection-card">
-                    <div class="collection-image jogger">
-                        <div class="collection-overlay">
-                            <div class="collection-icon">👖</div>
-                        </div>
-                    </div>
+                    <img src="polo3.jpg" alt="Designer Pattern Polo" class="product-img">
                     <div class="collection-info">
-                        <h3 class="collection-name">PREMIUM JOGGERS</h3>
-                        <p class="collection-desc">Refined athleisure that transitions seamlessly from leisure to lifestyle.</p>
-                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Premium%20Jogger%20collection" class="btn-order">INQUIRE NOW</a>
+                        <h3 class="collection-name">DESIGNER PATTERN POLO</h3>
+                        <p class="collection-desc">Bold checkered patterns in green & brown. Sophisticated style for the modern gentleman.</p>
+                        <div class="price-tag">$10</div>
+                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Designer%20Pattern%20Polo%20-%20$10" class="btn-order">ORDER NOW</a>
+                    </div>
+                </div>
+
+                <div class="collection-card">
+                    <img src="polo4.jpg" alt="Luxury Pattern Polo Collection" class="product-img">
+                    <div class="collection-info">
+                        <h3 class="collection-name">LUXURY PATTERN POLO</h3>
+                        <p class="collection-desc">Intricate designer patterns in green & blue. Statement pieces for distinguished tastes.</p>
+                        <div class="price-tag">$10</div>
+                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Luxury%20Pattern%20Polo%20-%20$10" class="btn-order">ORDER NOW</a>
+                    </div>
+                </div>
+
+                <div class="collection-card">
+                    <img src="joggers.jpg" alt="Premium Graphic Joggers" class="product-img">
+                    <div class="collection-info">
+                        <h3 class="collection-name">GRAPHIC JOGGERS</h3>
+                        <p class="collection-desc">Bold street style with large graphics. Comfortable fit meets urban fashion.</p>
+                        <div class="price-tag">$12</div>
+                        <a href="https://wa.me/2348157772699?text=I'm%20interested%20in%20the%20Graphic%20Joggers%20-%20$12" class="btn-order">ORDER NOW</a>
                     </div>
                 </div>
             </div>
